datatables.net-select-bs5, datatables.net-bs5 package added

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^1.2.0",
+        "datatables.net-bs5": "^2.1.7",
+        "datatables.net-select-bs5": "^2.1.0",
         "datatables.net-vue3": "^3.0.2",
         "vue-datatables-net": "^2.0.1",
         "vue-router": "^4.0.13"
